--- a/CocktailPlanner/Views/Cocktail/Create.cshtml
+++ b/CocktailPlanner/Views/Cocktail/Create.cshtml
@@ -1,4 +1,4 @@
-@model CocktailPlanner.Models.Cocktail
+@model CocktailPlanner.Models.CocktailCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,6 @@
 }
 
 <h1>Create</h1>
-
 <h4>Cocktail</h4>
 <hr />
 <div class="row">
@@ -28,17 +27,25 @@
                 <input asp-for="Image" class="form-control" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
+            <h4>Ingredients</h4>
+            <div>
+                @for (int i = 0; i < Model.Ingredients.Count; i++)
+                {
+                    <input type="checkbox" name="SelectedIngredientIds" value="@Model.Ingredients[i].IdIngredient" />
+                    <label>@Model.Ingredients[i].Name</label>
+                    <input asp-for="QuantityRequired" class="form-control" placeholder="Enter needed amount"/>
+                    <br />
+                }
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
