--- a/CocktailPlanner/Views/Cocktail/Index.cshtml
+++ b/CocktailPlanner/Views/Cocktail/Index.cshtml
@@ -5,45 +5,40 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Cocktails</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
+    <a asp-controller="Cocktail" asp-action="Listview">See as a list</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Image)
-            </th>
-            <th>
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.IdCocktail">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdCocktail">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdCocktail">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+  <div class="album py-5 bg-light">
+  <div class="container">
+
+      <div class="row">
+      @foreach (var item in Model)
+      {
+          <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                  <img class="card-img-top" src="@item.Image" width="100%" height="225" alt="Card image cap">
+                  <div class="card-body">
+                      <p class="card-text">@item.Name</p>
+                      <p class="card-text">@item.Description</p>
+                      <div class="d-flex justify-content-between align-items-center">
+                          <div class="btn-group">
+                              <a type="button" class="btn btn-sm btn-outline-secondary" asp-action="Details" asp-route-id="@item.IdCocktail">View</a>
+                              <a type="button" class="btn btn-sm btn-outline-secondary" asp-action="Edit" asp-route-id="@item.IdCocktail">Edit</a>
+                          </div>
+                          <a class="text-muted" asp-action="Delete" asp-route-id="@item.IdCocktail">Delete</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      }
+
+      </div>
+  </div>
+</div>
+
+
+
