--- a/CocktailPlanner/Views/Cocktail/Details.cshtml
+++ b/CocktailPlanner/Views/Cocktail/Details.cshtml
@@ -26,7 +26,7 @@ Layout = "~/Views/Shared/_Layout.cshtml";
             @Html.DisplayNameFor(model => model.Image)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
+            <img src="@Url.Content(Model.Image)" style="float:left;" width="150" height="150"/>
         </dd>
     </dl>
 </div>
