added 'add cocktail to event functionality'

--- a/CocktailPlanner/Views/EventPlan/Details.cshtml
+++ b/CocktailPlanner/Views/EventPlan/Details.cshtml
@@ -1,4 +1,4 @@
-@model CocktailPlanner.Models.EventPlan
+@model CocktailPlanner.Models.EventViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -31,6 +31,40 @@
         </dd>
     </dl>
 </div>
+
+    <h4>Cocktails</h4>
+    
+    <table class="table">
+        <thead>
+        <tr>
+            <th>
+                Name
+            </th>
+            <th>
+                Description
+            </th>
+            <th>
+                Amount
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+            @foreach(var item in Model.EventPlanCocktails)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(model => item.Cocktail.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(model => item.Cocktail.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(model => item.CocktailQuantity)
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.IdEvent">Edit</a> |
     <a asp-action="Index">Back to List</a>
