--- a/CocktailPlanner/Views/EventPlan/Create.cshtml
+++ b/CocktailPlanner/Views/EventPlan/Create.cshtml
@@ -1,4 +1,4 @@
-@model CocktailPlanner.Models.EventPlan
+@model CocktailPlanner.Models.EventCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -8,28 +8,39 @@
 <h1>Create</h1>
 
 <h4>EventPlan</h4>
-<hr />
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <input asp-for="Title" class="form-control"/>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <input asp-for="Description" class="form-control"/>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
+                <input asp-for="Date" class="form-control"/>
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
+            <h4>Cocktails</h4>
+
+            <div>
+                @for (int i = 0; i < Model.Cocktails.Count; i++)
+                {
+                    <input type="checkbox" name="SelectedCocktailIds" value="@Model.Cocktails[i].IdCocktail"/>
+                    <label>@Model.Cocktails[i].Name</label>
+                    <input asp-for="CocktailQuantity" class="form-control" placeholder="Enter needed amount"/>
+                    <br/>
+                }
+            </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary"/>
             </div>
         </form>
     </div>
@@ -40,5 +51,5 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
